--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -6,6 +6,11 @@
 
 .about h2 {
     text-align: center;
+    margin: 0;
+}
+
+.bg_about {
+    background-color: #6f04a7;
 }
 
 .rightText, .photo, .leftText {
