--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
-body, h1, h2, h3, h4, h5, h6 {
-  font-family: "Lato", sans-serif; }
+body {
+  font-family: 'Open Sans';
+  font-size: 20px; }
 
 body, html {
   height: 100%;
@@ -15,17 +16,14 @@ body {
   display: table; }
 
 /*Menu Styles*/
-.navbar {
-  color: #fff; }
-
 .navbar li a:hover {
-  background-color: rgba(0, 0, 0, 0.2);
   color: #fff; }
 
 .navbar li {
   float: left;
   list-style: none;
-  margin: 20px; }
+  margin: 20px;
+  font-size: 25px; }
 
 .navbar li a {
   text-decoration: none;
@@ -33,9 +31,10 @@ body {
 
 .name {
   color: black;
-  margin: 0;
   display: inline;
-  margin: 50px; }
+  margin-left: 50px;
+  font-family: 'Great Vibes';
+  font-size: 2.5em; }
 
 .menu ul {
   float: right;
@@ -45,12 +44,6 @@ body {
 
 .menu {
   background-color: #6f04a7; }
-
-.title h1 {
-  margin: 0;
-  padding: 50px;
-  margin-left: 20px;
-  color: black; }
 
 /*Parallax Effect*/
 .background_1, .background_2, .background_3 {
@@ -63,16 +56,15 @@ body {
 /* Bacground 1 */
 .background_1 {
   background-image: url("../img/banner1.jpg");
-  min-height: 100%; }
+  min-height: 926px; }
 
 /*About me*/
 .about {
   width: 80%;
-  margin: 0 auto; }
-
-.about h2 {
-  text-align: center;
-  margin: 0; }
+  margin: 0 auto;
+  color: #ffffff;
+  padding-top: 30px;
+  padding-bottom: 30px; }
 
 .bg_about {
   background-color: #6f04a7; }
@@ -91,16 +83,59 @@ body {
 /* Second image */
 .background_2 {
   background-image: url("../img/banner2.jpg");
-  min-height: 400px; }
+  min-height: 600px; }
 
 /*Projects*/
+#projects {
+  padding-top: 30px;
+  padding-bottom: 30px; }
+
 .subtitles {
   text-align: center;
-  font-size: 1.4em; }
+  font-size: 35px;
+  margin: 0;
+  font-weight: bold; }
 
 .texts {
   width: 60%;
   margin: 0 auto; }
+
+.texts p {
+  margin: 0; }
+
+.my_projects {
+  margin: 0 auto;
+  max-width: 60%;
+  text-align: center; }
+
+.projects_list {
+  margin: 0 auto;
+  padding: 0; }
+
+.projects_list li + li {
+  margin-left: 40px; }
+
+.project {
+  list-style: none;
+  display: inline; }
+
+.project img {
+  max-width: 25%;
+  max-height: 30%;
+  margin-top: 40px; }
+
+.icons {
+  margin: 0; }
+
+.icon_link img {
+  max-width: 2%; }
+
+.icons li {
+  list-style: none;
+  display: inline; }
+
+.icons li + li {
+  margin-left: 308px; }
 
 /* Third image */
 .background_3 {
@@ -112,14 +147,24 @@ body {
   .background_1, .background_2, .background_3 {
     background-attachment: scroll; } }
 /* About */
-#about {
-  font-size: 1.4em; }
-
+/*#about {
+font-size: 1.4em;
+}*/
 .skills {
-  margin-bottom: 200px; }
+  margin-bottom: 200px;
+  background-color: #6f04a7; }
 
 .contact {
   margin-bottom: 100px; }
+
+.email {
+  text-align: center; }
+
+.email p {
+  margin: 0; }
+
+.email img {
+  max-width: 25%; }
 
 /* Clearfix */
 .cf:before,
@@ -131,6 +176,39 @@ body {
 
 .cf:after {
   clear: both; }
+
+/*Skills*/
+.skills {
+  color: #ffffff;
+  padding-top: 30px;
+  padding-bottom: 30px; }
+
+.my_skills {
+  margin: 0;
+  margin-top: 30px;
+  padding: 0;
+  padding-left: 214px; }
+
+.my_skills li {
+  list-style: none;
+  display: inline-block;
+  width: 20%;
+  margin: 0 auto; }
+
+.my_skills li p {
+  max-width: 100%;
+  margin: 0;
+  margin-top: 10px; }
+
+.my_skills li h2 {
+  margin: 0; }
+
+.my_skills li + li {
+  margin-left: 155px; }
+
+.skills_list {
+  width: 80%;
+  margin: 0 auto; }
 
 .footer {
   background-color: #6f04a7;
