--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,4 +1,7 @@
-body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
+body {
+    font-family: 'Open Sans';
+    font-size: 20px;
+}
 body, html {
     height: 100%;
     color: black;
@@ -16,12 +19,7 @@ body {
 }
 
 /*Menu Styles*/
-.navbar { 
-    color: #fff; 
-}
-
 .navbar li a:hover { 
-    background-color: rgba(0,0,0,0.2); 
     color: #fff; 
 }
 
@@ -29,6 +27,7 @@ body {
     float: left;
     list-style: none;
     margin: 20px;
+    font-size: 25px;
 }
 
 .navbar li a {
@@ -38,10 +37,12 @@ body {
 
 .name {
     color: black;
-    margin: 0;
     display: inline;
-    margin: 50px;
+    margin-left: 50px;
+    font-family: 'Great Vibes';
+    font-size: 2.5em;
 }
+
 .menu ul {
     float: right;
     padding: 0;
@@ -53,13 +54,7 @@ body {
     background-color: #6f04a7;
 }
 
-.title h1 {
-    margin: 0;
-    padding: 50px;
-    margin-left: 20px;
-    color: black;
-    
-}
+
 
 
 /*Parallax Effect*/
@@ -74,6 +69,5 @@ body {
 /* Bacground 1 */
 .background_1 {
     background-image: url('../img/banner1.jpg');
-    min-height: 100%;
+    min-height: 926px;
 }
-
