--- a/css/main.css
+++ b/css/main.css
@@ -17,24 +17,39 @@ body {
 
 /*Menu Styles*/
 .navbar li a:hover {
-  color: #fff; }
+  font-size: 30px;
+  font-weight: bold; }
+
+.navbar {
+  width: 20%;
+  margin: 4% auto; }
 
 .navbar li {
-  float: left;
+  /*float: left;*/
+  padding: 6px;
   list-style: none;
   margin: 20px;
-  font-size: 25px; }
+  font-size: 25px;
+  background-color: #6f04a7; }
 
 .navbar li a {
   text-decoration: none;
-  color: black; }
+  color: white; }
+
+.title {
+  font-family: 'Great Vibes';
+  font-size: 3.5em;
+  color: #6f04a7;
+  text-align: center;
+  margin: 0;
+  padding-top: 40px; }
 
 .name {
-  color: black;
+  color: white;
   display: inline;
   margin-left: 50px;
-  font-family: 'Great Vibes';
-  font-size: 2.5em; }
+  font-size: 30px;
+  font-weight: 0; }
 
 .menu ul {
   float: right;
@@ -46,7 +61,7 @@ body {
   background-color: #6f04a7; }
 
 /*Parallax Effect*/
-.background_1, .background_2, .background_3 {
+.background_2, .background_3 {
   opacity: 0.7;
   background-attachment: fixed;
   background-position: center;
@@ -55,8 +70,10 @@ body {
 
 /* Bacground 1 */
 .background_1 {
-  background-image: url("../img/banner1.jpg");
-  min-height: 926px; }
+  height: 816px;
+  margin: 0 auto;
+  text-align: center;
+  background-image: url("../img/image.jpg"); }
 
 /*About me*/
 .about {
@@ -146,10 +163,6 @@ body {
 @media only screen and (max-width: 1024px) {
   .background_1, .background_2, .background_3 {
     background-attachment: scroll; } }
-/* About */
-/*#about {
-font-size: 1.4em;
-}*/
 .skills {
   margin-bottom: 200px;
   background-color: #6f04a7; }
