--- a/css/main.css
+++ b/css/main.css
@@ -51,13 +51,13 @@ body {
   font-size: 30px;
   font-weight: 0; }
 
-.menu ul {
+.name-bar ul {
   float: right;
   padding: 0;
   margin: 0;
   margin-right: 20px; }
 
-.menu {
+.name-bar {
   background-color: #6f04a7; }
 
 /*Parallax Effect*/
@@ -69,7 +69,7 @@ body {
   background-size: cover; }
 
 /* Bacground 1 */
-.background_1 {
+.menu {
   height: 816px;
   margin: 0 auto;
   text-align: center;
@@ -161,7 +161,7 @@ body {
 
 /* Parallax */
 @media only screen and (max-width: 1024px) {
-  .background_1, .background_2, .background_3 {
+  .menu, .background_2, .background_3 {
     background-attachment: scroll; } }
 .skills {
   margin-bottom: 200px;
