--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -106,7 +106,7 @@
 
 /* Parallax */
 @media only screen and (max-width: 1024px) {
-    .background_1, .background_2, .background_3 {
+    .menu, .background_2, .background_3 {
         background-attachment: scroll;
     }
 }
