--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -60,14 +60,14 @@ body {
     font-weight: 0;
 }
 
-.menu ul {
+.name-bar ul {
     float: right;
     padding: 0;
     margin: 0;
     margin-right: 20px;
 }
 
-.menu {
+.name-bar {
     background-color: #6f04a7;
 }
 
@@ -84,7 +84,7 @@ body {
 }
 
 /* Bacground 1 */
-.background_1 {
+.menu {
     height: 816px;
     margin: 0 auto;
     text-align: center;
