--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,4 +1,23 @@
 .footer {
+    width: 100%;
     background-color: #6f04a7;
-    height: 200px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    
+}
+
+.icons img {
+    width: 6%;
+}
+
+.icons {
+    list-style: none;
+    color: white;
+    margin-bottom: 20px;
+}
+
+.footer-list {
+    width: 40%;
+    margin: 0 auto;
+    margin-left: 800px;
 }
