--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -37,9 +37,6 @@
     padding-bottom: 30px;
 }
 
-#projects h2 {
-    color: #6f04a7;
-}
 .subtitles {
     text-align: center;
     font-size: 35px;
@@ -151,7 +148,7 @@
 .skills {
     color: #ffffff;
     padding-top: 30px;
-    /*padding-bottom: 30px;*/
+    padding-bottom: 30px;
 }
 
 .my_skills {
